--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -11,19 +11,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
+        android:gravity="center"
+        android:textSize="15sp"
         android:textColor="#444"
         android:text="Preview"
         android:id="@+id/register_preview"
         android:layout_gravity="center" />
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:id="@+id/register_mark_dribbble"
             android:src="@drawable/ic_baseline_cloud_download_24"
-            android:layout_gravity="center_horizontal"
             android:background="@android:color/transparent"
             android:clickable="true"
             android:focusable="true"/>
@@ -33,10 +39,13 @@
             android:layout_height="50dp"
             android:id="@+id/register_logo_dribbble"
             android:src="@drawable/ic_baseline_cloud_download_24"
-            android:layout_gravity="center_horizontal"
             android:background="@android:color/transparent"
             android:clickable="true"
             android:focusable="true"/>
+
+    </LinearLayout>
+
+
 
 
 
