--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -18,6 +18,11 @@
         android:id="@+id/register_preview"
         android:layout_gravity="center" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/background_delimiter"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,6 +51,11 @@
     </LinearLayout>
 
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/background_delimiter"/>
 
 
 
