--- a/app/src/main/res/values/work_strings.xml
+++ b/app/src/main/res/values/work_strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="register_preview">Публикуй свое творчество на</string>
-    <string name="register_disclaimer">Используя этот сервис, ты обязуешся соблюдать принципы его сообщества и соблюдать условия использования.</string>
-    <string name="register_private">Используя этот сервис, ты обязуешся соблюдать принципы сообщества.</string>
+    <string name="register_preview">Для дальнейшей работы авторизируйся в</string>
+    <string name="register_signIn">Вход</string>
+    <string name="register_signUp">Регистрация</string>
+
 
 
 </resources>
