--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -13,49 +13,47 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="15sp"
-        android:textColor="#444"
+        android:textColor="@color/gray_dribble"
         android:text="Preview"
         android:id="@+id/register_preview"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_margin="5dp"
-        android:background="@drawable/background_delimiter"/>
+    <View style="@style/delimiter_register"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+    <LinearLayout style="@style/contain_register_horizont">
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <ImageView style="@style/images_logo_register"
             android:id="@+id/register_mark_dribbble"
             android:src="@drawable/ic_baseline_cloud_download_24"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:focusable="true"/>
+            android:layout_weight="41"/>
 
-        <ImageView
-            android:layout_width="205dp"
-            android:layout_height="50dp"
+        <ImageView style="@style/images_logo_register"
             android:id="@+id/register_logo_dribbble"
             android:src="@drawable/ic_baseline_cloud_download_24"
-            android:background="@android:color/transparent"
-            android:clickable="true"
-            android:focusable="true"/>
+            android:layout_weight="10"/>
 
     </LinearLayout>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_margin="5dp"
-        android:background="@drawable/background_delimiter"/>
+    <View style="@style/delimiter_register"/>
+
+    <LinearLayout style="@style/contain_register_horizont">
+
+        <Button style="@style/buttons_register"
+            android:layout_marginEnd="@dimen/register_margin"
+            android:id="@+id/register_signIn"
+            android:text="text"/>
+
+       <Button style="@style/buttons_register"
+           android:layout_marginStart="@dimen/register_margin"
+           android:id="@+id/register_signUp"
+           android:backgroundTint="@color/light_gray_dribble"
+           android:textColor="@color/gray_dribble"
+           android:text="text" />
+
+    </LinearLayout>
 
 
 
