--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="pink_dribble">#EA4C89</color>
+    <color name="gray_dribble">#444</color>
+    <color name="dark_pink_dribble">#C32361</color>
+    <color name="light_gray_dribble">#E3E3E3</color>
 </resources>
