--- a/app/src/main/res/layout/register_fragment.xml
+++ b/app/src/main/res/layout/register_fragment.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:textSize="15sp"
         android:textColor="@color/gray_dribble"
-        android:text="Preview"
+        android:text="@string/register_preview"
         android:id="@+id/register_preview"
         android:layout_gravity="center"
         android:layout_marginStart="5dp"
@@ -26,12 +26,12 @@
 
         <ImageView style="@style/images_logo_register"
             android:id="@+id/register_mark_dribbble"
-            android:src="@drawable/ic_baseline_cloud_download_24"
+            android:src="@drawable/ic_dribbble_ball_mark"
             android:layout_weight="41"/>
 
         <ImageView style="@style/images_logo_register"
             android:id="@+id/register_logo_dribbble"
-            android:src="@drawable/ic_baseline_cloud_download_24"
+            android:src="@drawable/ic_dribbble_logo"
             android:layout_weight="10"/>
 
     </LinearLayout>
@@ -44,14 +44,14 @@
         <Button style="@style/buttons_register"
             android:layout_marginEnd="@dimen/register_margin"
             android:id="@+id/register_signIn"
-            android:text="text"/>
+            android:text="@string/register_signIn"/>
 
        <Button style="@style/buttons_register"
            android:layout_marginStart="@dimen/register_margin"
            android:id="@+id/register_signUp"
            android:backgroundTint="@color/light_gray_dribble"
            android:textColor="@color/gray_dribble"
-           android:text="text" />
+           android:text="@string/register_signUp" />
 
     </LinearLayout>
 
