--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,20 +17,24 @@
         <item name="android:background">@drawable/background_delimiter</item>
     </style>
 
-    <style name="buttons_register">
+    <style name="common_register_actions">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="buttons_register" parent="common_register_actions">
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/background_buttons_register</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_marginBottom">@dimen/register_margin</item>
+
     </style>
 
-    <style name="images_logo_register">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
+    <style name="images_logo_register" parent="common_register_actions">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
     </style>
+
+
 </resources>
