--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -1,7 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity" />
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:textColor="@color/gray_dribble"
+        android:text="@string/register_preview"
+        android:id="@+id/register_preview"
+        android:layout_gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"/>
+
+    <View style="@style/delimiter_register"/>
+
+    <LinearLayout style="@style/contain_register_horizont">
+
+        <ImageView style="@style/images_logo_register"
+            android:id="@+id/register_mark_dribbble"
+            android:src="@drawable/ic_dribbble_ball_mark"
+            android:layout_weight="41"
+            android:onClick="onClick"/>
+
+        <ImageView style="@style/images_logo_register"
+            android:id="@+id/register_logo_dribbble"
+            android:src="@drawable/ic_dribbble_logo"
+            android:layout_weight="10"
+            android:onClick="onClick"/>
+
+    </LinearLayout>
+
+
+    <View style="@style/delimiter_register"/>
+
+    <LinearLayout style="@style/contain_register_horizont">
+
+        <Button style="@style/buttons_register"
+            android:layout_marginEnd="@dimen/register_margin"
+            android:id="@+id/register_signIn"
+            android:text="@string/register_signIn"
+            android:onClick="onClick"/>
+
+        <Button style="@style/buttons_register"
+            android:layout_marginStart="@dimen/register_margin"
+            android:id="@+id/register_signUp"
+            android:backgroundTint="@color/light_gray_dribble"
+            android:textColor="@color/gray_dribble"
+            android:text="@string/register_signUp"
+            android:onClick="onClick"/>
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
