--- a/app/src/main/res/layout/register_dialog.xml
+++ b/app/src/main/res/layout/register_dialog.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
             name="dialog"
             type="com.kittendevelop.kittendribbble.ui.register.RegisterDialog" />
-
-<!--        <import type="android.view.View" />-->
     </data>
 
 
